<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_PrimerValor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/txt_SegundoValor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="321dp"
        android:layout_height="207dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2">

        <RadioButton
            android:id="@+id/rb_sumar"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:text="@string/rb1"
            android:textSize="18sp"
            tools:text="@string/rb1" />

        <RadioButton
            android:id="@+id/rb_restar"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:text="@string/rb2"
            android:textSize="18sp"
            tools:text="@string/rb2" />

        <RadioButton
            android:id="@+id/rb_multiplicar"
            android:layout_width="146dp"
            android:layout_height="48dp"
            android:text="@string/rb3"
            android:textSize="18sp"
            tools:text="@string/rb3" />

        <RadioButton
            android:id="@+id/rb_dividir"
            android:layout_width="146dp"
            android:layout_height="48dp"
            android:text="@string/rb4"
            android:textSize="18sp"
            tools:text="@string/rb4" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:onClick="Calcular"
        android:text="@string/button_Operacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/textView_Resutado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>